Suppress the autofill password manager after a credential was saved via the API.

Without this the user may see two save prompts one after another.

BUG=607501

Review-Url: https://codereview.chromium.org/1929953002
Cr-Commit-Position: refs/heads/master@{#390384}

Former-commit-id: 86f6265c50793ff42c9853640610c20ba5eadbf6